#top의z인덱스수정하고 소개영상갱신

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -51,7 +51,7 @@
 /* Ensure container content is above the video */
 #top .container {
     position: relative;
-    z-index: 2; /* Keep text above everything else */
+    z-index: 0; /* Keep text above everything else */
     color: #fff; /* Text color for contrast */
 }
 
@@ -356,7 +356,7 @@
             </div>    
             <br class='break-m'>
             <div class="video-container">
-                <iframe src="https://www.youtube-nocookie.com/embed/pfNGYVuxQqs?si=AHOJKgEdDIwsJ-Vk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/kVcxlHBy4-Q?si=AM0keTGRyqpWaLYQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>      
         </div>
 
