소개영상갱신

--- a/portfolio/gallery/index.html
+++ b/portfolio/gallery/index.html
@@ -160,7 +160,7 @@
     let closeBtns = document.querySelectorAll(".close");
     let currentIndex = 0;
     const images = ["1.png", "2.png", "3.png", "4.png", "5.png"];
-    const videoSrc = "https://www.youtube.com/embed/kQarRwDZmxw?si=_ClggdpXl-RVbmUN";
+    const videoSrc = "https://youtu.be/kVcxlHBy4-Q?si=kSFEv5m8rWJw9WNC";
 
     function updateModalContent(index) {
         modalImg.src = images[index];
