페이지제목아이콘추가

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -10,6 +10,8 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="icon" href="images/토털.png"/>
+		<link rel="apple-touch-icon" href="images/토털.png"/>
 	</head>
 	<link rel="stylesheet" href="styles.css">
 	<style>
@@ -420,7 +422,6 @@
 					<div class="container">
 				
 						<header>
-							<h2>Vision</h2>
 						</header>
 						<div class="section">
 							<div class="image-container">
