video dir안에있던글자밖으로뺌 그리고 줄바꿈추가

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -353,14 +353,16 @@
             다양한 측량사업으로 정밀도로지도, POI 및 GIS DB구축 용역의 착수부터 준공까지하며, 시스템 유지보수까지.
             이러한 경험들을 바탕으로 <strong style="font-weight:900;">자동화 기술과 노하우</strong>를 보여 드리겠습니다.
             </p>
-		<div class="video-container">
-			자체제작영상(디졸브영상편집툴활용)<br class='break-m'>
+		자체제작영상(디졸브영상편집툴활용)<br class='break-m'>
+		<div class="video-container">			
                 <iframe src="https://www.youtube.com/embed/K4f1a1-2sw4?si=GayPJ9ysx9RdIA_3" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>    	
+		<br class='break-m'>
+		Portfolio 정리영상<br class='break-m'>
             <div class="video-container">
-		    Portfolio 정리영상<br class='break-m'>
                 <iframe src="https://www.youtube.com/embed/kQarRwDZmxw?si=_ClggdpXl-RVbmUN" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>    
+		<br class='break-m'>
             사업경험/역량/비전 PPT자료 <br class='break-m'>
             <div class="video-container">
                 <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSYDqguJooYlhit37ynXoGC5OzZC2a5AqM-7gdSeKCl4jc-m_HyF0KiHF4rlEZm28YAAGjgR9OFt1_E/embed?start=true&loop=true&delayms=10000" frameborder="0" width="480" height="299" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
