자격증 모달 업데이트

--- a/portfolio/gallery/index.html
+++ b/portfolio/gallery/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Image Modal Gallery</title>
-        <style>
+    <style>
         body {
             font-family: Arial, sans-serif;
             margin: 0;
@@ -263,7 +263,8 @@
 
     <button id="backButton" onclick="goBack()">돌아가기</button>
     <button id="openVideoModalBtn">영상제작물 시청</button>
-    <button id="openModalBtn">경력증명서열람</button>
+    <button id="openModalBtn">경력증명서 열람</button>
+    <button id="openModalBtn">자격증 열람</button>
 
     <!-- Certificate Modal -->
     <div id="certificateModal" class="modal-certificate">
