전화번호누르면 전화연결

--- a/portfolio/gallery/index.html
+++ b/portfolio/gallery/index.html
@@ -318,7 +318,7 @@
     <div class="contact-info">
         Name : 신명호<br>
         eMail : <a href="mailto:scent7942@gmail.com">scent7942@gmail.com</a><br>
-        Tel : 010-8352-4471
+        Tel : <a href="tel:010-8352-4471">010-8352-4471</a>
     </div>
 
     <!-- Certificate Modal -->
