카피라이트번호누르면전화연결

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -488,7 +488,7 @@
 				<!-- Copyright -->
 			
 					<ul class="신명호 : 010-8352-4471">
-						<li>&copy; 신명호 : 010-8352-4471</li><li>email: <a href="scent7942@gmail.com">scent7942@gmail.com</a></li>
+						<li>&copy; 신명호 : <a href="tel:010-8352-4471">010-8352-4471</a></li><li>email: <a href="mailto:scent7942@gmail.com">scent7942@gmail.com</a></li>
 					</ul>
 
 			</div>
