소개영상2업로드

--- a/portfolio/gallery/index.html
+++ b/portfolio/gallery/index.html
@@ -362,8 +362,8 @@
                 <iframe id="modalVideo" src="https://www.youtube.com/embed/K4f1a1-2sw4?si=GayPJ9ysx9RdIA_3" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
             <div class="video-buttons">
-                <button onclick="loadVideo('https://www.youtube.com/embed/K4f1a1-2sw4?si=GayPJ9ysx9RdIA_3')">Video 1</button>
-                <button onclick="loadVideo('https://www.youtube.com/embed/another_video_url')">Video 2</button>
+                <button onclick="loadVideo('https://www.youtube.com/embed/K4f1a1-2sw4?si=GayPJ9ysx9RdIA_3')">영상 1</button>
+                <button onclick="loadVideo('https://www.youtube.com/embed/kQarRwDZmxw?si=S5u7dN34VHH16GZU')">영상 2</button>
             </div>
         </div>
     </div>
