--- a/portfolio/gallery/index.html
+++ b/portfolio/gallery/index.html
@@ -51,6 +51,7 @@
             object-fit: cover;
             z-index: -1; /* Place the video behind other content */
         }
+
         button {
             background-color: #007bff7c;
             color: white;
@@ -61,25 +62,30 @@
             cursor: pointer;
             transition: background-color 0.3s, transform 0.3s;
         }
+
         button:hover {
             background-color: #0056b3;
             transform: scale(1.05);
         }
+
         button:active {
             background-color: #004080;
             transform: scale(0.95);
         }
+
         @media screen and (max-width: 600px), screen and (min-width: 601px) and (max-width: 1900px) {
             .break-m {
                 display: block;
             }
         }
+
         @media (max-width: 600px) {
             button {
                 padding: 10px 20px;
                 font-size: 1em;
             }
         }
+
         .modal-certificate, .modal-license, .modal-chart {
             display: none;
             position: fixed;
@@ -93,6 +99,7 @@
             justify-content: center;
             align-items: center;
         }
+
         .modal-content-container {
             display: flex;
             flex-direction: column;
@@ -122,6 +129,7 @@
             margin-bottom: 20px;
             object-fit: contain;
         } -->
+
         .modal-video {
             display: none;
             position: fixed;
@@ -135,6 +143,7 @@
             justify-content: center;
             align-items: center;
         }
+
         .modal-content-video {
             display: flex;
             flex-direction: column;
@@ -145,12 +154,14 @@
             max-width: 80%;
             max-height: 80%;
         }
+
         .video-container {
             width: 100%;
             height: 0;
             padding-top: 56.25%; /* 16:9 Aspect Ratio */
             position: relative;
         }
+
         .video-container iframe {
             position: absolute;
             top: 0;
@@ -159,12 +170,14 @@
             height: 100%;
             object-fit: contain;
         }
+
         .video-buttons {
             display: flex;
             gap: 10px;
             justify-content: center;
             margin-top: 10px;
         }
+
         .close {
             position: absolute;
             top: 15px;
@@ -175,12 +188,14 @@
             transition: 0.3s;
             z-index: 10; /* Ensure close button is on top */
         }
+
         .close:hover,
         .close:focus {
             color: #bbb;
             text-decoration: none;
             cursor: pointer;
         }
+
         .prev, .next {
             cursor: pointer;
             position: absolute;
@@ -194,15 +209,19 @@
             transition: 0.6s ease;
             user-select: none;
         }
+
         .prev {
             left: 0;
         }
+
         .next {
             right: 0;
         }
+
         .prev:hover, .next:hover {
             background-color: rgba(0, 0, 0, 0.8);
         }
+
         .page-number {
             position: absolute;
             bottom: 20px;
@@ -216,6 +235,7 @@
             padding: 5px 10px;
             border-radius: 5px;
         }
+
         #backButton {
             position: absolute;
             top: 10px;
@@ -229,14 +249,17 @@
             cursor: pointer;
             transition: background-color 0.3s, transform 0.3s;
         }
+
         #backButton:hover {
             background-color: #c82333;
             transform: scale(1.05);
         }
+
         #backButton:active {
             background-color: #bd2130;
             transform: scale(0.95);
         }
+
         @media all and (max-width: 1024px) {
             /* 일반버전(2) - PC작은창, 태블릿 */
             .modal-content-certificate, .modal-content-license, .modal-content-chart {
@@ -244,6 +267,7 @@
                 max-height: 80%;
             }
         }
+
         @media all and (max-width: 767px) {
             /* 모바일버전(1) - 일반 스마트폰 */
             .modal-content-certificate, .modal-content-license, .modal-content-chart {
@@ -251,15 +275,18 @@
                 max-height: 90%;
             }
         }
+
         @media all and (max-width: 280px) {
             /* 모바일버전(2) - 갤럭시 플립 */
             .modal-content-certificate, .modal-content-license, .modal-content-chart {
                 max-width: 95%;
                 max-height: 95%;
             }
+
             .page-number {
                 font-size: 14px;
             }
+
             .close {
                 position: absolute;
                 top: 10px;
@@ -275,26 +302,31 @@
         function goBack() {
             window.location.href = "https://realscent.github.io/shinmyeongho/portfolio";
         }
+
         function loadVideo(url) {
             document.getElementById("modalVideo").src = url;
         }
     </script>
 </head>
 <body>
+
     <video autoplay muted loop class="background-video">
         <source src="../images/top.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
+
     <button id="backButton" onclick="goBack()">돌아가기</button>
     <button id="openVideoModalBtn">영상제작물 시청</button>
     <button id="openModalBtn">경력증명서 열람</button>
     <button id="openLicenseModalBtn">자격증 열람</button>
     <button id="openChartModalBtn">역량차트 열람</button>
+
     <div class="contact-info">
         Name : 신명호<br>
         eMail : <a href="mailto:scent7942@gmail.com">scent7942@gmail.com</a><br>
         Tel : <a href="tel:010-8352-4471">010-8352-4471</a>
     </div>
+
     <!-- Certificate Modal -->
     <div id="certificateModal" class="modal-certificate">
         <span class="close">&times;</span>
@@ -316,6 +348,7 @@
             <a class="next license-next">&#10095;</a>
         </div>
     </div>
+
         <!-- Chart Modal -->
         <div id="chartModal" class="modal-chart">
             <span class="close">&times;</span>
@@ -326,6 +359,7 @@
                 <a class="next chart-next">&#10095;</a>
             </div>
         </div>
+
     <!-- Video Modal -->
     <div id="videoModal" class="modal-video">
         <span class="close">&times;</span>
@@ -353,27 +387,34 @@
             "../images/Career/5.png"
         ];
         var certificateIndex = 0;
+
         certificateBtn.onclick = function() {
             certificateModal.style.display = "flex";
             loadCertificateImage(certificateIndex);
         }
+
         certificateSpan.onclick = function() {
             certificateModal.style.display = "none";
         }
+
         function loadCertificateImage(index) {
             document.getElementById('modalImage').src = certificateImages[index];
             document.getElementById('pageNumber').innerText = `Page ${index + 1} of ${certificateImages.length}`;
         }
+
         var prevBtn = certificateModal.getElementsByClassName('prev')[0];
         var nextBtn = certificateModal.getElementsByClassName('next')[0];
+
         prevBtn.onclick = function() {
             certificateIndex = (certificateIndex - 1 + certificateImages.length) % certificateImages.length;
             loadCertificateImage(certificateIndex);
         }
+
         nextBtn.onclick = function() {
             certificateIndex = (certificateIndex + 1) % certificateImages.length;
             loadCertificateImage(certificateIndex);
         }
+
         // License Modal Logic
         var licenseModal = document.getElementById('licenseModal');
         var licenseBtn = document.getElementById('openLicenseModalBtn');
@@ -389,27 +430,34 @@
             "../images/Certificate/ITQ자격증.jpg"
         ];
         var licenseIndex = 0;
+
         licenseBtn.onclick = function() {
             licenseModal.style.display = "flex";
             loadLicenseImage(licenseIndex);
         }
+
         licenseSpan.onclick = function() {
             licenseModal.style.display = "none";
         }
+
         function loadLicenseImage(index) {
             document.getElementById('licenseModalImage').src = licenseImages[index];
             document.getElementById('licensePageNumber').innerText = `Page ${index + 1} of ${licenseImages.length}`;
         }
+
         var licensePrevBtn = licenseModal.getElementsByClassName('prev license-prev')[0];
         var licenseNextBtn = licenseModal.getElementsByClassName('next license-next')[0];
+
         licensePrevBtn.onclick = function() {
             licenseIndex = (licenseIndex - 1 + licenseImages.length) % licenseImages.length;
             loadLicenseImage(licenseIndex);
         }
+
         licenseNextBtn.onclick = function() {
             licenseIndex = (licenseIndex + 1) % licenseImages.length;
             loadLicenseImage(licenseIndex);
         }
+
           // chart Modal Logic
           var chartModal = document.getElementById('chartModal');
           var chartBtn = document.getElementById('openChartModalBtn');
@@ -438,3 +486,45 @@
   
           var chartPrevBtn = chartModal.getElementsByClassName('prev chart-prev')[0];
           var chartNextBtn = chartModal.getElementsByClassName('next chart-next')[0];
+  
+          chartPrevBtn.onclick = function() {
+              chartIndex = (chartIndex - 1 + chartImages.length) % chartImages.length;
+              loadchartImage(chartIndex);
+          }
+  
+          chartNextBtn.onclick = function() {
+              chartIndex = (chartIndex + 1) % chartImages.length;
+              loadchartImage(chartIndex);
+          }
+
+        // Video Modal Logic
+        var videoModal = document.getElementById('videoModal');
+        var videoBtn = document.getElementById('openVideoModalBtn');
+        var videoSpan = videoModal.getElementsByClassName('close')[0];
+
+        videoBtn.onclick = function() {
+            videoModal.style.display = "flex";
+        }
+
+        videoSpan.onclick = function() {
+            videoModal.style.display = "none";
+        }
+
+        window.onclick = function(event) {
+            if (event.target == certificateModal) {
+                certificateModal.style.display = "none";
+            }
+            if (event.target == videoModal) {
+                videoModal.style.display = "none";
+            }
+            if (event.target == licenseModal) {
+                licenseModal.style.display = "none";
+            }
+        }
+        if (event.target == chartModal) {
+            chartModal.style.display = "none";
+        }
+
+    </script>
+</body>
+</html>
