--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -386,27 +386,27 @@
 				
 										    <div class="gallery">
 												<div class="gallery-item">
-													<img src="images/측량및지형공간정보기사.jpg" alt="측량및지형공간정보기사">
+													<img src="images/Certificate/측량및지형공간정보기사.jpg" alt="측량및지형공간정보기사">
 													<div class="caption">측량 및<br class='break-m'>지형공간정보<br class='break-m'>기사</div>
 												</div>
 												<div class="gallery-item">
-													<img src="images/측량및지형공간정보산업기사.jpg" alt="측량및지형공간정보산업기사">
+													<img src="images/Certificate/측량및지형공간정보산업기사.jpg" alt="측량및지형공간정보산업기사">
 													<div class="caption">측량 및<br class='break-m'>지형공간정보<br class='break-m'>산업기사</div>
 												</div>
 												<div class="gallery-item">
-													<img src="images/측량기능사.jpg" alt="측량기능사">
+													<img src="images/Certificate/측량기능사.jpg" alt="측량기능사">
 													<div class="caption">측량기능사</div>
 												</div>
 												<div class="gallery-item">
-													<img src="images/전산응용토목제도기능사.jpg" alt="전산응용토목제도기능사">
+													<img src="images/Certificate/전산응용토목제도기능사.jpg" alt="전산응용토목제도기능사">
 													<div class="caption">전산응용토목제도기능사</div>
 												</div>
 												<div class="gallery-item">
-													<img src="images/지도제작기능사.jpg" alt="지도제작기능사">
+													<img src="images/Certificate/지도제작기능사.jpg" alt="지도제작기능사">
 													<div class="caption">지도제작기능사</div>
 												</div>
 												<div class="gallery-item">
-													<img src="images/건설재료시험기능사.jpg" alt="건설재료시험기능사">
+													<img src="images/Certificate/건설재료시험기능사.jpg" alt="건설재료시험기능사">
 													<div class="caption">건설재료시험기능사</div>
 												</div>
 											</div>
