--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -12,6 +12,8 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="icon" href="images/토털.png"/>
 		<link rel="apple-touch-icon" href="images/토털.png"/>
+		<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+		<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"/>
 	</head>
 	<link rel="stylesheet" href="styles.css">
 	<style>
@@ -150,7 +152,15 @@
 			height: auto;
 			display: block;
 		}
-	  
+		.gallery-item:hover img {
+            transform: scale(1.05);
+        }
+
+        /* Active slide styling */
+        .gallery-item.slick-current {
+            transform: scale(1.2); /* Increase the size of the active slide */
+            z-index: 1;
+        }
 		/* Centering the caption and making its size relative to the gallery item */
 		.caption {
 			position: absolute;
@@ -565,6 +575,83 @@ document.addEventListener('DOMContentLoaded', function () {
 		}
 	});
   </script>
+
+
+      <!-- Slick Slider JavaScript -->
+	  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
+	  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
   
+	  <script>
+		  $(document).ready(function(){
+			  $('.gallery').slick({
+				  infinite: true,
+				  slidesToShow: 3,
+				  slidesToScroll: 1,
+				  dots: true,
+				  arrows: true,
+				  centerMode: true,  // Center the active slide
+				  centerPadding: '20px', // Adjust padding for spacing
+				  autoplay: true,      // Enable autoplay
+				  autoplaySpeed: 3000, // Set autoplay speed to 3 seconds (3000 milliseconds)
+				  responsive: [
+					  {
+						  breakpoint: 768,
+						  settings: {
+							  slidesToShow: 2,
+							  slidesToScroll: 1,
+							  centerMode: true,
+							  centerPadding: '10px'
+						  }
+					  },
+					  {
+						  breakpoint: 480,
+						  settings: {
+							  slidesToShow: 1,
+							  slidesToScroll: 1,
+							  centerMode: true,
+							  centerPadding: '10px'
+						  }
+					  }
+				  ]
+			  });
+  
+			  // Variables to detect drag
+			  let isDragging = false;
+  
+			  // Detect drag start
+			  $('.gallery-item img').on('mousedown', function() {
+				  isDragging = false;
+			  });
+  
+			  // Detect drag end
+			  $('.gallery-item img').on('mousemove', function() {
+				  isDragging = true;
+			  });
+  
+			  // Modal functionality only if not dragged
+			  $('.gallery-item img').on('click', function() {
+				  if (!isDragging) {
+					  let modal = document.getElementById("myModal");
+					  let modalImg = document.getElementById("img01");
+					  let captionText = document.getElementById("caption");
+					  modal.style.display = "block";
+					  modalImg.src = this.src;
+					  captionText.innerHTML = this.alt;
+				  }
+				  isDragging = false;
+			  });
+  
+			  // Close modal
+			  document.getElementsByClassName("close")[0].onclick = function() { 
+				  document.getElementById("myModal").style.display = "none";
+			  }
+  
+			  // Adjust the size of the active slide
+			  $('.gallery').on('afterChange', function(event, slick, currentSlide){
+				  $('.gallery-item').removeClass('slick-current');
+				  $(slick.$slides[currentSlide]).addClass('slick-current');
+			  });
+		  });
+	  </script>
 	</body>
 </html>
