--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -408,17 +408,25 @@
 													<div class="caption">측량기능사</div>
 												</div>
 												<div class="gallery-item">
-													<img src="images/Certificate/전산응용토목제도기능사.jpg" alt="전산응용토목제도기능사">
-													<div class="caption">전산응용토목제도기능사</div>
-												</div>
-												<div class="gallery-item">
 													<img src="images/Certificate/지도제작기능사.jpg" alt="지도제작기능사">
 													<div class="caption">지도제작기능사</div>
+												</div>
+												<div class="gallery-item">
+													<img src="images/Certificate/항공사진기능사.jpg" alt="항공사진기능사">
+													<div class="caption">항공사진기능사</div>
+												</div>											    
+											    	<div class="gallery-item">
+													<img src="images/Certificate/전산응용토목제도기능사.jpg" alt="전산응용토목제도기능사">
+													<div class="caption">전산응용토목제도기능사</div>
 												</div>
 												<div class="gallery-item">
 													<img src="images/Certificate/건설재료시험기능사.jpg" alt="건설재료시험기능사">
 													<div class="caption">건설재료시험기능사</div>
 												</div>
+												<div class="gallery-item">
+													<img src="images/Certificate/ITQ자격증.jpg" alt="ITQ엑셀,파포,한글,인터넷">
+													<div class="caption">ITQ엑셀,파포,한글,인터넷</div>
+												</div>											    
 											</div>
 										
 											<div id="myModal" class="modal">
